# Mangeto_Automation_Project

./: .gitignore  Auto.yml  CMakeLists.txt
config/: config.properties
src/: main.cpp
src/bdd/: BDDTestRunner.cpp  BDDTestRunner.h  StepDefinitions.cpp  StepDefinitions.h  main_bdd.cpp
src/pages/: BasePage.cpp  BasePage.h  CreateAccountPage.cpp  CreateAccountPage.h  HomePage.cpp  HomePage.h  MyAccountPage.cpp  MyAccountPage.h  SignInPage.cpp  SignInPage.h
src/tests/: SignInTests.cpp  SignInTests.h  SignUpTests.cpp  SignUpTests.h
src/utils/: ConfigReader.cpp  ConfigReader.h  DriverManager.cpp  DriverManager.h  TestDataGenerator.cpp  TestDataGenerator.h
